--- a/style/style.css
+++ b/style/style.css
@@ -8,17 +8,22 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 960px;
-    margin: auto;
-    background-color: rgb(77, 127, 110);
+    background-color: #1e1e1e;
+    margin: 0 auto;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 16px 24px;
     background-color: aqua;
+}
+
+.header {
+    max-width: 1200px;
+    display: flex;
+    margin: auto;
+    padding: 0 16px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #menu {
@@ -45,7 +50,9 @@ header {
 #first {
     height: 92vh;
     display: flex;
-    background-color: lightblue;
+    /*background-color: lightblue;*/
+    margin: auto;
+    max-width: 1200px;
 }
 
 #action {
@@ -54,11 +61,11 @@ header {
     padding: 40px;
     display: flex;
     flex-direction: column;
-
+    color: white;
 }
 
 #action h1 {
-    margin-bottom: 16px;
+    margin-bottom: 24px;
     font-size: 3em;
 }
 
@@ -68,4 +75,65 @@ header {
     background: url(../image/me.jpg) no-repeat center center;
     background-size: cover;
     background-color: green;
+}
+
+#projects {
+    height: 100vh;
+    width: 100%;
+    background-color: white;
+    padding: 48px 0;
+    margin: auto;
+}
+
+#projects h1 {
+    text-align: center;
+    margin-bottom: 48px;
+}
+
+.abandono, .simulador {
+    max-width: 900px;
+    height: 300px;
+    margin: 48px auto;
+    display: flex;
+}
+
+.abandono img, .simulador img {
+    height: 300px;
+    box-shadow: 0px 2px 12px 2px rgba(0, 0, 0, 0.264);
+}
+
+.summary {
+    width: 400px;
+    height: 100%;
+    margin-right: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.summary h2 {
+    margin-bottom: 16px;
+}
+
+.summary a {
+    text-decoration: none;
+    padding: 8px 16px;
+    background-color: #1e1e1e;
+    color: white;
+    display: flex;
+    align-self: flex-start;
+    margin-top: auto;
+
+}
+
+.divider {
+    width: 900px;
+    margin: 40px auto;
+    border-color: rgba(0, 0, 0, 0.126);
+}
+
+.simulador {
+    max-width: 900px;
+    margin: 16px auto;
+    display: flex;
 }
