Mudança na cor do header

--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,8 @@ body {
 
 header {
     padding: 16px 24px;
-    background-color: aqua;
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .header {
@@ -34,7 +35,7 @@ header {
 #menu a {
     margin-left: 24px;
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: bold;
     height: 30px;
     display: flex;
@@ -50,7 +51,6 @@ header {
 #first {
     height: 92vh;
     display: flex;
-    /*background-color: lightblue;*/
     margin: auto;
     max-width: 1200px;
 }
@@ -74,7 +74,6 @@ header {
     width: 50%;
     background: url(../image/me.jpg) no-repeat center center;
     background-size: cover;
-    background-color: green;
 }
 
 #projects {
