--- a/style/style.css
+++ b/style/style.css
@@ -6,16 +6,22 @@
     box-sizing: border-box;
 }
 
+:root {
+    --white: #fafafa;
+    --black: #1e1e1e;
+    --black-secundary: #313131;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #1e1e1e;
+    background-color: var(--black);
     margin: 0 auto;
 }
 
 header {
     padding: 16px 24px;
-    background-color: rgb(0, 0, 0);
-    color: white;
+    background-color: var(--white);
+    color: var(--black);
 }
 
 .header {
@@ -35,7 +41,7 @@ header {
 #menu a {
     margin-left: 24px;
     text-decoration: none;
-    color: white;
+    color: var(--black);
     font-weight: bold;
     height: 30px;
     display: flex;
@@ -53,6 +59,7 @@ header {
     display: flex;
     margin: auto;
     max-width: 1200px;
+    /*ADICIONAR UM BG E OUTRO FOTO (NÁO PRECISA SER MINHA)*/
 }
 
 #action {
@@ -61,7 +68,7 @@ header {
     padding: 40px;
     display: flex;
     flex-direction: column;
-    color: white;
+    color: var(--white);
 }
 
 #action h1 {
@@ -77,62 +84,119 @@ header {
 }
 
 #projects {
-    height: 100vh;
-    width: 100%;
-    background-color: white;
+    height: 100%;
+    background-color: var(--white);
     padding: 48px 0;
+}
+
+#projects > h1 { 
+    text-align: center;
+    font-size: 2.5em;
+}
+
+#projects > p {
+    padding: 24px;
+    text-align: center;
+}
+
+#carrossel {
+    display: flex;
+    max-width: 1200px;
+    justify-content: center;
+    margin: auto;
+    gap: 24px;
+}
+
+.case {
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 4px 12px 1px rgba(59, 59, 59, 0.232);
+    width: 384px;
+    margin: auto;
+    padding: 20px;
+    transition: transform .24s ;
+}
+
+.case:hover {
+    transform: translate(-0px, -2px);
+    transition: transform .24s ;
+    transform: scale(1.01);
+}
+
+.case img {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0cap 2px 10px 1px rgba(0, 0, 0, 0.173);
+}
+
+.case h2 {
+    margin-top: 8px;
+    font-size: 1.2em;
+    font-style: italic;
+}
+
+.case p{
+    margin-top: 8px;
+}
+
+.case a{
+    padding: 8px 10px;
+    background: var(--black);
+    color: white;
+    display: inline-block;
+    margin-top: 8px;
+    border-radius: 4px;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+}
+
+.case a:hover {
+    background-color: #000000;
+}
+
+#profissional {
+    color: var(--white);
+    max-width: 1200px;
     margin: auto;
 }
 
-#projects h1 {
-    text-align: center;
-    margin-bottom: 48px;
-}
-
-.abandono, .simulador {
-    max-width: 900px;
-    height: 300px;
-    margin: 48px auto;
-    display: flex;
-}
-
-.abandono img, .simulador img {
-    height: 300px;
-    box-shadow: 0px 2px 12px 2px rgba(0, 0, 0, 0.264);
-}
-
-.summary {
-    width: 400px;
+#profissional {
     height: 100%;
-    margin-right: 24px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    padding: 48px 0;
 }
 
-.summary h2 {
-    margin-bottom: 16px;
+
+#profissional > h1 { 
+    text-align: center;
+    font-size: 2.5em;
 }
 
-.summary a {
-    text-decoration: none;
-    padding: 8px 16px;
-    background-color: #1e1e1e;
-    color: white;
-    display: flex;
-    align-self: flex-start;
-    margin-top: auto;
-
+#profissional > p {
+    text-align: center;
+    padding: 24px;
 }
 
-.divider {
-    width: 900px;
-    margin: 40px auto;
-    border-color: rgba(0, 0, 0, 0.126);
+table {
+    border-collapse: collapse;
 }
 
-.simulador {
-    max-width: 900px;
-    margin: 16px auto;
-    display: flex;
+th, td {
+    padding: 8px 14px;
+    text-align: left;
+    vertical-align: top;
+}
+
+tr:nth-child(odd) {
+    background-color: var(--black-secundary);
+}
+
+td > ul > li {
+    list-style-position: inside;
+    line-height: 1.3em;
+}
+
+li span {
+    position: relative;
+    left: -10px;
 }
