--- a/style/style.css
+++ b/style/style.css
@@ -14,72 +14,87 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: var(--black);
+    background-color: var(--white);
     margin: 0 auto;
 }
 
 header {
-    padding: 16px 24px;
     background-color: var(--white);
+    box-shadow: 2px 0 4px 4px rgba(70, 70, 70, 0.201);
     color: var(--black);
+    height: 65px;
+    position: fixed;
+    width: 100vw;
+    z-index: 1;
 }
 
 .header {
     max-width: 1200px;
-    display: flex;
     margin: auto;
-    padding: 0 16px;
-    justify-content: space-between;
+    height: 100%;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 #menu {
     display: flex;
-    justify-content: space-around;
-}
-
-#menu a {
-    margin-left: 24px;
-    text-decoration: none;
-    color: var(--black);
-    font-weight: bold;
-    height: 30px;
-    display: flex;
+    gap: 8px;
+    height: 100%;
+    justify-content: center;
     align-items: center;
 }
 
+#menu a {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    padding: 8px;
+}
+
 #menu a:hover {
+    border-bottom: 3px solid black;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.100);
-    transform: translate(0px, -2px);
+    /* transform: translate(0px, -2px); */
     transition: transform .24s;
 }
 
+#primeiro {
+    width: 100%;
+    background: white url(../image/bg-first.jpg) no-repeat center center;
+    background-size: cover;
+    text-align: center;
+    clip-path: polygon(0 0, 100% 0, 110% 90%, 0 100%);
+    box-shadow: 2px 2px 4px black;
+}
+
 #first {
-    height: 92vh;
+    height: 100vh;
     display: flex;
     margin: auto;
     max-width: 1200px;
-    /*ADICIONAR UM BG E OUTRO FOTO (NÁO PRECISA SER MINHA)*/
+    /* transform: rotate(30deg); */
 }
 
 #action {
-    width: 51%;
+    /* width: 51%; */
     margin: auto;
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
+    padding: 40px 40px 40px 0;
     color: var(--white);
 }
 
 #action h1 {
     margin-bottom: 24px;
-    font-size: 3em;
+    font-size: 4em;
+    text-shadow: 2px 2px 2px rgba(58, 58, 58, 0.673);
 }
-
 
 #image {
     width: 50%;
-    background: url(../image/me.jpg) no-repeat center center;
+    /* background: url(../image/me.jpg) no-repeat center center; */
     background-size: cover;
 }
 
@@ -156,10 +171,17 @@ header {
     width: 100%;
 }
 
+#terceiro {
+    width: 100vw;
+    background-image: linear-gradient(0deg, var(--black), var(--white));
+    text-align: center;
+}
+
 #profissional {
     color: var(--white);
-    max-width: 1200px;
     margin: auto;
+    width: 100%;
+    max-width: 1200px;
 }
 
 #profissional {
@@ -169,12 +191,12 @@ header {
 
 
 #profissional > h1 { 
-    text-align: center;
+    color: var(--black);
     font-size: 2.5em;
 }
 
 #profissional > p {
-    text-align: center;
+    color: var(--black);
     padding: 24px;
 }
 
@@ -204,6 +226,10 @@ tr:nth-child(odd) {
     background-color: var(--black-secundary);
 }
 
+tr:nth-child(even) {
+    background-color: var(--black);
+}
+
 li {
     list-style-position: inside;
     line-height: 1.5em;
@@ -223,4 +249,17 @@ td.period {
 
 td em {
     font-size: 16px;
+}
+
+#educational {
+    background-color: var(--black);
+    height: 100vh;
+    color: var(--white);
+    text-align: center;
+    padding: 48px 0;
+}
+
+#educational h1 {
+    font-size: 2.5em;
+
 }
