--- a/style/style.css
+++ b/style/style.css
@@ -67,7 +67,7 @@ header {
     background: white url(../image/bg-first.jpg) no-repeat center center;
     background-size: cover;
     text-align: center;
-    clip-path: polygon(0 0, 100% 0, 110% 90%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 93%, 0 100%);
     box-shadow: 2px 2px 4px black;
 }
 
@@ -98,8 +98,11 @@ header {
     background-size: cover;
 }
 
+/* SEÇÃO DOS CASES */
+
 #projects {
     height: 100%;
+    width: 100%;
     background-color: var(--white);
     padding: 48px 0;
 }
@@ -171,9 +174,11 @@ header {
     width: 100%;
 }
 
+/* SEÇÃO PROFISSIONAL */
+
 #terceiro {
-    width: 100vw;
-    background-image: linear-gradient(0deg, var(--black), var(--white));
+    width: 100%;
+    background-image: linear-gradient(0deg, var(--black-secundary), var(--white));
     text-align: center;
 }
 
@@ -203,6 +208,7 @@ header {
 
 table {
     border-collapse: collapse;
+    box-shadow: 0px 1px 10px 1px rgba(171, 171, 171, 0.247);
 }
 
 th, td {
@@ -251,8 +257,10 @@ td em {
     font-size: 16px;
 }
 
+/* SEÇÃO DAS FORMAÇÕES ACADEMICAS */
+
 #educational {
-    background-color: var(--black);
+    background-color: var(--black-secundary);
     height: 100vh;
     color: var(--white);
     text-align: center;
