--- a/style/style.css
+++ b/style/style.css
@@ -62,6 +62,8 @@ header {
     transition: transform .24s;
 }
 
+/* CONFIGURAÇÕES DA PRIMEIRA PARTE */
+
 #primeiro {
     width: 100%;
     background: white url(../image/bg-first.jpg) no-repeat center center;
@@ -75,13 +77,12 @@ header {
     height: 100vh;
     display: flex;
     margin: auto;
-    max-width: 1200px;
+    width: 100%;
+    background-color: #00000091;
 }
 
 #action {
-    /* width: 51%; */
     margin: auto;
-    padding: 40px 40px 40px 0;
     color: var(--white);
 }
 
@@ -91,11 +92,52 @@ header {
     text-shadow: 2px 2px 2px rgba(58, 58, 58, 0.673);
 }
 
-#image {
-    width: 50%;
-    /* background: url(../image/me.jpg) no-repeat center center; */
-    background-size: cover;
+.btn-download {
+    color: var(--black);
+    background-color: white;
+    display: inline-block;
+    width: 400px;
+    padding: 24px;
+    margin: auto;
+    margin-top: 40px;
+    border-radius: 44px;
+    text-decoration: none;
+    font-weight: bolder;
 }
+
+.btn-download:hover {
+    background-color: var(--black-secundary);
+    box-shadow: 0px 4px 8px 1px rgba(255, 255, 255, 0.308);
+    color: var(--white);
+    transform: translate(0px, -4px),;
+    transition: background-color .3s;
+}
+
+.btn-projects {
+    display: inline-block;
+    margin-left: 24px;
+    width: 400px;
+    border: 4px solid white;
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+    padding: 24px;
+    border-radius: 44px;
+}
+
+.btn-projects:hover {
+    background-color: white;
+    color: var(--black);
+    transition: background-color .3s;
+    transform: translate(-2px -2px);
+
+}
+
+/* #image {
+    width: 50%;
+    background: url(../image/me.jpg) no-repeat center center;
+    background-size: cover;
+} */
 
 /* SEÇÃO DOS CASES */
 
@@ -104,11 +146,12 @@ header {
     width: 100%;
     background-color: var(--white);
     padding: 48px 0;
+    
 }
 
 #projects > h1 { 
-    text-align: center;
     font-size: 2.5em;
+    text-align: center;
 }
 
 #projects > p {
@@ -117,9 +160,11 @@ header {
 }
 
 #container {
-    display: flex;
     max-width: 1200px;
     margin: auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
     gap: 8px;
 }
 
@@ -129,7 +174,7 @@ header {
     box-shadow: 0px 4px 12px 1px rgba(59, 59, 59, 0.232);
     padding: 20px;
     transition: transform .24s ;
-    /*width: 384px;*/
+    flex: 0 1 390px;
 }
 
 .case:hover {
@@ -152,14 +197,18 @@ header {
 
 .case p{
     margin: 8px 0;
+    height: 100%;
+    width: 100%;
+    flex: 1 0 auto;
 }
 
 .case a{
+    border: 1px dotted black;
     padding: 8px 10px;
     background: var(--black);
     color: white;
-    display: inline-block;
     border-radius: 4px;
+    display: inline-block;
     width: 100%;
     text-align: center;
     text-decoration: none;
@@ -167,10 +216,6 @@ header {
 
 .case a:hover {
     background-color: #000000;
-}
-
-.abandono > p {
-    width: 100%;
 }
 
 /* SEÇÃO PROFISSIONAL */
