--- a/style/style.css
+++ b/style/style.css
@@ -10,15 +10,16 @@
     --white: #fafafa;
     --black: #1e1e1e;
     --black-secundary: #313131;
+    --black-low: #474747;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: var(--white);
+    background-color: var(--black);
     margin: 0 auto;
 }
 
-/* SEÇÃO DO MENU */
+/* CONFIGURAÇÕES DO MENU */
 
 header {
     background-color: var(--white);
@@ -79,7 +80,7 @@ header {
     transition: transform .24s;
 }
 
-/* CONFIGURAÇÕES DA PRIMEIRA PARTE */
+/* CONFIGURAÇÕES DO HERO */
 
 #hero {
     width: 100%;
@@ -88,7 +89,7 @@ header {
     background-size: cover;
     text-align: center;
     clip-path: polygon(0 0, 100% 0, 100% 93%, 0 100%);
-    box-shadow: 2px 2px 4px black;
+    /* box-shadow: 2px 2px 4px black; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -128,7 +129,7 @@ header {
     border-radius: 44px;
     text-decoration: none;
     font-weight: 300;
-
+    transition: transform .3s;
 }
 .btn-download::after {
     content: "download"; /* Nome do ícone */
@@ -140,7 +141,7 @@ header {
 
 .btn-download:hover {
     /* background-color: var(--black-secundary); */
-    box-shadow: 0px 4px 8px 1px rgba(255, 255, 255, 0.308);
+    /* box-shadow: 0px 4px 8px 1px rgba(255, 255, 255, 0.308); */
     /* color: var(--white); */
     transform: scale(1.02);
     transition: transform .3s;
@@ -157,6 +158,7 @@ header {
     text-decoration: none;
     padding: 24px;
     border-radius: 44px;
+    transition: transform .3s;
 }
 
 .btn-projects:hover {
@@ -167,30 +169,24 @@ header {
 
 }
 
-/* #image {
-    width: 50%;
-    background: url(../image/me.jpg) no-repeat center center;
-    background-size: cover;
-} */
-
-/* SEÇÃO DOS CASES */
+/* CONFIGURAÇÕES DOS CASES */
 
 #projects {
     height: 100%;
     width: 100%;
-    background-color: var(--white);
     padding: 48px 0;
-    
 }
 
 #projects > h1 { 
     font-size: 2.5em;
     text-align: center;
+    color: var(--white);
 }
 
 #projects > p {
     padding: 24px;
     text-align: center;
+    color: var(--white);
 }
 
 #container {
@@ -204,11 +200,12 @@ header {
 
 .case {
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 4px 12px 1px rgba(59, 59, 59, 0.232);
+    background: var(--black-secundary);
+    /* box-shadow: 0px 4px 12px 1px rgba(59, 59, 59, 0.232); */
     padding: 20px;
     transition: transform .24s ;
     flex: 0 1 390px;
+    color: var(--white);
 }
 
 .case:hover {
@@ -237,31 +234,36 @@ header {
 }
 
 .case a{
-    border: 1px dotted black;
-    padding: 8px 10px;
-    background: var(--black);
+    padding: 14px 30px;
     color: white;
     border-radius: 4px;
     display: inline-block;
     width: 100%;
     text-align: center;
     text-decoration: none;
+    border: 2px solid var(--white);
+    border-radius: 30px;
+    transition: background-color .4s;
+    margin-top: 10px;
 }
 
 .case a:hover {
-    background-color: #000000;
+    background-color: var(--white);
+    color: var(--black-secundary);
+    /* font-weight: bold; */
+    transition: background-color .4s;
 }
 
-/* SEÇÃO PROFISSIONAL */
+/* CONFIGURAÇÕES DA TRAJETÓRIA PROFISSIONAL */
 
 #terceiro {
     width: 100%;
-    background-image: linear-gradient(0deg, var(--black-secundary), var(--white));
+    background: var(--white);
     text-align: center;
 }
 
 #profissional {
-    color: var(--white);
+    color: var(--black);
     margin: auto;
     width: 100%;
     max-width: 1200px;
@@ -273,20 +275,19 @@ header {
 }
 
 
-#profissional > h1 { 
-    color: var(--black);
+#profissional > h1 {
     font-size: 2.5em;
 }
 
 #profissional > p {
-    color: var(--black);
     padding: 24px;
 }
 
 
 table {
     border-collapse: collapse;
-    box-shadow: 0px 1px 10px 1px rgba(171, 171, 171, 0.247);
+    /* box-shadow: 0px 1px 10px 1px rgba(171, 171, 171, 0.247); */
+    color: var(--white);
 }
 
 th, td {
@@ -335,11 +336,11 @@ td em {
     font-size: 16px;
 }
 
-/* SEÇÃO DAS FORMAÇÕES ACADEMICAS */
+/* CONFIGURAÇÕES DAS ESPECIALIDADES */
 
 #quarto {
-    background-color: var(--black-secundary);
-    height: 100vh;
+    /* background-color: var(--black-secundary); */
+    /* height: 100vh; */
     color: var(--white);
     text-align: center;
     padding: 48px 0;
@@ -357,14 +358,90 @@ td em {
 
 .badge {
     padding: 16px 32px;
-    background-color: var(--black);
+    background-color: var(--black-secundary);
     display: inline-block;
     border-radius: 48px;
+    color: var(--white);
+    /* box-shadow: 0px 0px 14px 1px var(--black) inset; */
 }
 
+/* CONFIGURAÇÕES DO SOBRE MIM */
+
+#quinto {
+    width: 100%;
+    color: var(--white);
+    padding: 48px 0;
+    margin: 40px 0;
+}
+.sobre {
+    display: flex;
+    max-width: 1200px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    flex-flow: 1 1 auto;
+    gap: 80px;
+}
+
+.about-content {
+    width: 600px;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 24px;
+}
+
+#about h1 {
+    font-size: 2em;
+    margin-bottom: 24px;
+}
+
+.me {
+    width: 300px;
+    height: 500px;
+    display: block;
+    /* background: black url(image/me.jpg); */
+    overflow: hidden;
+}
+
+.me img {
+    height: 100%;
+    width: 100%;
+    border-radius: 40px;
+    z-index: 1;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+#skill h1 {
+    margin-bottom: 16px;
+}
+
+.badge-skill {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 8px;
+}
+
+.bola {
+    display: block;
+    width: 835px;
+    height: 600px;
+    background-image: linear-gradient(-45deg, var(--black), var(--black-low));
+    position: absolute;
+    right: 0px;
+    z-index: -1;
+    border-radius: 300px 0 0 300px;
+}
+
+#skill h1 {
+    font-style: italic;
+}
+
+/* CONFIGURAÇÕES DO FOOTER */
+
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: var(--black-secundary);
+    color: var(--white);
     padding: 20px;
     text-align: center;
 }
@@ -372,6 +449,9 @@ footer {
 .footer-content {
     max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .social-links a {
@@ -383,3 +463,23 @@ footer {
 .social-links a:hover {
     color: #00aaff; /* Altere para a cor de sua preferência */
 }
+
+.icon {
+    display: inline-block;
+    width: 36px;
+    height: 36px;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.icon img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    color: white;
+  }
+
+  .icon:hover {
+    transform: scale(1.08);
+    transition: transform .3s;
+  }
