--- a/style/style.css
+++ b/style/style.css
@@ -394,7 +394,7 @@ td em {
     justify-content: center;
     align-items: center;
     flex-flow: 1 1 auto;
-    gap: 80px;
+    gap: 40px;
 }
 
 .about-content {
@@ -411,19 +411,16 @@ td em {
 
 .me {
     width: 300px;
-    height: 500px;
-    display: block;
-    /* background: black url(image/me.jpg); */
+    height: 411px;
     overflow: hidden;
+    border-radius: 40px;
+    box-shadow: 4px 1px 15px 4px rgba(0, 0, 0, 0.493);
 }
 
 .me img {
     height: 100%;
     width: 100%;
-    border-radius: 40px;
-    z-index: 1;
-    object-fit: cover;
-    overflow: hidden;
+    
 }
 
 #skill h1 {
@@ -439,7 +436,7 @@ td em {
 .bola {
     display: block;
     width: 835px;
-    height: 600px;
+    height: 450px;
     background-image: linear-gradient(-45deg, var(--black), var(--black-low));
     position: absolute;
     right: 0px;
