--- a/style/abandono.css
+++ b/style/abandono.css
@@ -15,7 +15,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: var(--black);
+    background-color: var(--white);
     margin: 0 auto;
 }
 
@@ -95,10 +95,19 @@ header {
 
 /* CONFIGURAÇÕES DO HERO */
 
+#hero-img {
+    width: 100%;
+    height: 500px;
+    background: black url(/image/capa-abandono.png) no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 #hero-img img {
     width: 100%;
     height: 500px;
     object-fit: cover;
+    /* position: fixed; */
 }
 
 /* CONFIGURAÇÃO DO CASE */
@@ -106,7 +115,7 @@ header {
 #case {
     max-width: 860px;
     margin: auto;
-    color: var(--white);
+    color: var(--black);
     padding: 48px 0;
 }
 
@@ -140,6 +149,7 @@ header {
     margin: auto;
     margin-bottom: 16px;
     width: 100%;
+    box-shadow: 0px 0px 4px 1px rgba(74, 74, 74, 0.218);
 }
 
 #case span {
@@ -159,14 +169,87 @@ header {
 /* CONFIGURAÇÃO DOS PRÓXIMOS CASES */
 
 #prox-case {
-    height: 400px;
-    background-color: bisque;
+    background-color: var(--black);
+    color: var(--white);
 }
 
 .mais-case {
     max-width: 1200px;
     margin: auto;
     padding: 48px 0;
+    text-align: center;
+}
+
+.mais-case h1 {
+    font-size: 2em;
+    margin-bottom: 16px;
+}
+
+#container {
+    max-width: 1200px;
+    margin: 24px auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    gap: 8px;
+}
+
+.case {
+    border-radius: 10px;
+    background: var(--black-secundary);
+    /* box-shadow: 0px 4px 12px 1px rgba(59, 59, 59, 0.232); */
+    padding: 20px;
+    transition: transform .24s ;
+    flex: 1 1 auto;
+    color: var(--white);
+}
+
+.case:hover {
+    transform: translate(-0px, -2px);
+    transition: transform .24s ;
+    transform: scale(1.01);
+}
+
+.case img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0cap 2px 10px 1px rgba(0, 0, 0, 0.173);
+}
+
+.case h2 {
+    margin-top: 8px;
+    font-size: 1.2em;
+    font-style: italic;
+}
+
+.case p{
+    margin: 8px 0;
+    height: 100%;
+    width: 100%;
+    flex: 1 0 auto;
+}
+
+.case a{
+    padding: 14px 30px;
+    color: white;
+    border-radius: 4px;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    border: 2px solid var(--white);
+    border-radius: 30px;
+    transition: background-color .4s;
+    margin-top: 10px;
+}
+
+.case a:hover {
+    background-color: var(--white);
+    color: var(--black-secundary);
+    /* font-weight: bold; */
+    transition: background-color .4s;
 }
 
 /* CONFIGURAÇÕES DO FOOTER */
