--- a/style/abandono.css
+++ b/style/abandono.css
@@ -98,7 +98,7 @@ header {
 #hero-img {
     width: 100%;
     height: 500px;
-    background: black url(/image/capa-abandono.png) no-repeat center center;
+    background: url(/image/capa-abandono.png) no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
 }
