Criação case ambev

--- a/style/abandono.css
+++ b/style/abandono.css
@@ -140,8 +140,17 @@ header {
     content: '→ ';
 }
 
-#case p {
+#case p, li {
     margin-bottom: 16px;
+    font-size: 1.1em;
+}
+
+#case li {
+    margin-bottom: 8px;
+}
+
+.ident {
+    text-indent: 20px;
 }
 
 #case img {
@@ -250,6 +259,11 @@ header {
     color: var(--black-secundary);
     /* font-weight: bold; */
     transition: background-color .4s;
+}
+
+#case ul {
+    position: relative;
+    left: 20px;
 }
 
 /* CONFIGURAÇÕES DO FOOTER */
