--- a/style/style.css
+++ b/style/style.css
@@ -229,6 +229,8 @@ header {
 
 .case img {
     width: 100%;
+    height: 200px;
+    object-fit: cover;
     border-radius: 10px;
     box-shadow: 0cap 2px 10px 1px rgba(0, 0, 0, 0.173);
 }
