--- a/style/simulador.css
+++ b/style/simulador.css
@@ -98,7 +98,8 @@ header {
 #hero-img {
     width: 100%;
     height: 500px;
-    background-image: url("../image/ui-aplicado.webp") no-repeat center center;
+    /* background-image: url("../image/ui-aplicado.webp") no-repeat center center; */
+    background: url(../image/ui-aplicado.webp) no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
 }
