--- a/style/abandono.css
+++ b/style/abandono.css
@@ -99,7 +99,7 @@ header {
     width: 100%;
     height: 500px;
     /* background-image: url("../image/capa-abandono.png") no-repeat center center; */
-    background: url(/image/capa-abandono.png) no-repeat center center;
+    background: url(../image/capa-abandono.png) no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
 }
