--- a/style/style.css
+++ b/style/style.css
@@ -217,7 +217,7 @@ header {
     /* box-shadow: 0px 4px 12px 1px rgba(59, 59, 59, 0.232); */
     padding: 20px;
     transition: transform .24s ;
-    flex: 0 1 390px;
+    flex: 0 1 auto;
     color: var(--white);
 }
 
@@ -275,7 +275,6 @@ header {
     width: 100%;
     background: var(--white);
     text-align: center;
-    /* padding-top: 65px; */
 }
 
 #profissional {
@@ -496,4 +495,76 @@ footer {
   .icon:hover {
     transform: scale(1.08);
     transition: transform .3s;
+  }
+
+  @media screen and (max-width: 601px) {
+    .header {
+        padding: 0 16px;
+    }
+
+    #hero {
+        width: 100%;
+    }
+
+    #hero-content {
+        padding: 16px;
+    }
+
+    .btn-projects {
+        margin: 0;
+        margin-top: 20px;
+    }
+
+    #hero-content h1 {
+        font-size: 2.5em;
+    }
+    
+    #container {
+        max-width: 550px;
+        flex-flow: column nowrap;
+        padding: 0 32px;
+    }
+
+    .case {
+        flex: 0 1 auto;
+    }
+
+    .function {
+        display: none;
+    }
+
+    #profissional {
+        padding: 16px;
+    }
+
+    #quinto {
+        width: 100%;
+        color: var(--white);
+        padding: 48px 0;
+        margin:0;
+    }
+
+    #about {
+        margin-top: 0px;
+        padding: 0;
+    }
+
+    .about-content {
+        text-align: center;
+        padding: 16px;
+    }
+
+    .me {
+        display: none;
+    }
+
+    .bola {
+        display: none;
+    }
+
+    .badge-skill {
+        justify-content: center;
+        align-items: center;
+    }
+
   }
