--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@ header {
     height: 65px;
     position: fixed;
     width: 100vw;
-    z-index: 1;
+    z-index: 2;
 }
 
 .header {
@@ -42,6 +42,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    /* z-index: 10; */
 }
 
 .space {
@@ -104,6 +105,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: -1;
 }
 
 #hero::before {
@@ -114,13 +116,14 @@ header {
     top: 0;
     left: 0;
     background: #000000af;
+    z-index: 0;
 }
 
 #hero-content {
     max-width: 1200px;
     margin: auto;
     color: var(--white);
-    z-index: 2;
+    z-index: 1;
 }
 
 #hero-content h1 {
