--- a/style/style.css
+++ b/style/style.css
@@ -111,7 +111,7 @@ header {
 #hero::before {
     content: '';
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
